# docs/swagger.yaml
@@ -158,7 +158,7 @@ definitions:
       full_name:
         type: string
     type: object
-host: localhost:8080
+host: final-project-03-production.up.railway.app/
 info:
   contact: {}
   description: This is a simple server mimicking Instagram server.
@@ -210,6 +210,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Category object to be created
         in: body
         name: model.Category
@@ -239,6 +244,8 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
       summary: Creates a new category
       tags:
       - Categories
@@ -290,6 +297,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Category ID
         in: path
         name: categoryId
@@ -324,6 +336,8 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
       summary: Update a Category.
       tags:
       - Categories
@@ -416,6 +430,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Task object to be created
         in: body
         name: model.Category
@@ -445,6 +464,8 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
       summary: Creates a new task
       tags:
       - Task
@@ -453,6 +474,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Task ID
         in: path
         name: taskId
@@ -487,6 +513,8 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
       summary: Update a Task.
       tags:
       - Task
@@ -495,6 +523,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Task ID
         in: path
         name: taskId
@@ -529,6 +562,8 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
       summary: Update a Task.
       tags:
       - Task
@@ -537,6 +572,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Task ID
         in: path
         name: taskId
@@ -571,6 +611,8 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
       summary: Update a Task.
       tags:
       - Task
@@ -578,6 +620,12 @@ paths:
     delete:
       consumes:
       - application/json
+      parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -601,6 +649,8 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
       summary: Delete an Account.
       tags:
       - Users
@@ -683,6 +733,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User object to be updated
         in: body
         name: model.User
@@ -712,6 +767,8 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
       summary: Update an Account.
       tags:
       - Users
